# FoundationCore

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Justfile  README.md  cliff.toml  conanfile.txt
.conan2/profiles/: clang  clang-ci
.github/workflows/: ci.yaml  release.yaml  release.yaml.yml
cmake/: toolchain-clang.cmake
docs/: architecture.md  codestyle.md
include/foundation_core/: hello.h
include/foundation_core/core/: platform.h  status.h  string_view.h  types.h
src/: hello.asm  hello.c  main.c
src/core/: platform.c  status.c  string_view.c
